--- a/insurance.html
+++ b/insurance.html
@@ -139,8 +139,8 @@
               </a>
               <div class="collapse" id="general-pages">
                 <ul class="nav flex-column sub-menu">
-                  <li class="nav-item"> <a class="nav-link" href="pension.html#sec1">Employee Provident fund</a></li>
-                  <li class="nav-item"> <a class="nav-link" href="pension.html#sec2">Public provident fund</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="pention.html#sec1">Employee Provident fund</a></li>
+                  <li class="nav-item"> <a class="nav-link" href="pention.html#sec2">Public provident fund</a></li>
                 </ul>
               </div>
             </li>
