add insurance connections

--- a/investment.html
+++ b/investment.html
@@ -1149,7 +1149,9 @@
     <script src="assets/js/misc.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page -->
-    <script src="assets/js/dashboard.js"></script
+    <script src="assets/js/investment.js"></script>
+    <script src="assets/js/chart.js"></script>
+    <script src="assets/js/dashboard.js"></script>
     <!-- End custom js for this page -->
   </body>
 </html>
