some minor changes

--- a/insurance.html
+++ b/insurance.html
@@ -50,17 +50,11 @@
                   <p class="mb-1 text-black">Sayanshree Paria</p>
                 </div>
               </a>
-              <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
-                <a class="dropdown-item" href="#">
-                  <i class="mdi mdi-logout me-2 text-primary"></i>Demo Bank 1</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">
-                  <i class="mdi mdi-logout me-2 text-primary"></i> Demo Bank 2 </a>
-                  <a class="dropdown-item" href="#">
-                    <i class="mdi mdi-logout me-2 text-primary"></i>Demo Bank 3</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">
-                    <i class="mdi mdi-logout me-2 text-primary"></i> Demo Bank 4 </a>
+              <div class="dropdown-menu navbar-dropdown" style="padding: 1rem;" aria-labelledby="profileDropdown">
+                <input type="checkbox"> Demo Bank 1</input><br>
+                <input type="checkbox"> Demo Bank 2 </input><br>
+                <input type="checkbox"> Demo Bank 3</input><br>
+                <input type="checkbox"> Demo Bank 4 </input>
               </div>
             </li>
             <li class="nav-item nav-logout d-none d-lg-block">
