--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!-- navbar-->
       <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-          <a class="navbar-brand brand-logo" href="index.html"><img src="assets/images/logo.svg" alt="logo" /></a>
+          <a class="navbar-brand brand-logo" href="index.html">VisualPe</a>
           <a class="navbar-brand brand-logo-mini" href="index.html"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-stretch">
@@ -47,20 +47,14 @@
                   <span class="availability-status online"></span>
                 </div>
                 <div class="nav-profile-text">
-                  <p class="mb-1 text-black">Sayanshree Paria</p>
+                  <p class="mb-1 text-black">User</p>
                 </div>
               </a>
-              <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
-                <a class="dropdown-item" href="#">
-                  <i class="mdi mdi-logout me-2 text-primary"></i>Demo Bank 1</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">
-                  <i class="mdi mdi-logout me-2 text-primary"></i> Demo Bank 2 </a>
-                  <a class="dropdown-item" href="#">
-                    <i class="mdi mdi-logout me-2 text-primary"></i>Demo Bank 3</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">
-                    <i class="mdi mdi-logout me-2 text-primary"></i> Demo Bank 4 </a>
+              <div class="dropdown-menu navbar-dropdown" style="padding: 1rem;" aria-labelledby="profileDropdown">
+                <input type="checkbox"> Demo Bank 1</input><br>
+                <input type="checkbox"> Demo Bank 2 </input><br>
+                <input type="checkbox"> Demo Bank 3</input><br>
+                <input type="checkbox"> Demo Bank 4 </input>
               </div>
             </li>
             <li class="nav-item nav-logout d-none d-lg-block">
@@ -85,7 +79,7 @@
                   <img src="assets/images/faces/face1.jpg" alt="profile">
                 </div>
                 <div class="nav-profile-text d-flex flex-column">
-                  <span class="font-weight-bold mb-2">Sayanshree Paria</span>
+                  <span class="font-weight-bold mb-2">User</span>
                 </div>
               </a>
             </li>
