--- a/pages/charts/chartjs.html
+++ b/pages/charts/chartjs.html
@@ -116,6 +116,9 @@
     <!-- endinject -->
     <!-- Custom js for this page -->
     <script src="../../assets/js/chart.js"></script>
+    <script>
+      Bar("barChart",[1,2,3,4],["a","b","c","d"])
+    </script>
     <!-- End custom js for this page -->
   </body>
 </html>
