--- a/pention.html
+++ b/pention.html
@@ -194,11 +194,16 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-6 grid-margin stretch-card">
-                <div class="card">
+              <div class="col-md-6 stretch-card grid-margin">
+                <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
-                    <canvas id="epf-bar" style="height:250px"></canvas>
+                    <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
+                    <h4 class="font-weight-normal mb-3">Current Balance <i class="mdi mdi-chart-line mdi-24px float-right"></i>
+                    </h4>
+                    <h3 class="mb-5" id="epf-cb">$ 15,0000</h3>
+                    <h4 class="font-weight-normal mb-3">Total Balance <i class="mdi mdi-chart-line mdi-24px float-right"></i>
+                    </h4>
+                    <h3 class="mb-5" id="epf-tb">$ 15,0000</h3>
                   </div>
                 </div>
               </div>
@@ -227,7 +232,7 @@
                     <h4 class="font-weight-normal mb-3">Current Ammount <i class="mdi mdi-chart-line mdi-24px float-right"></i>
                     </h4>
                     <h3 class="mb-5" id="ppf-cb">$ 15,0000</h3>
-                    <h6 class="card-text">Increased by 60%</h6>
+                    
                   </div>
                 </div>
               </div>
@@ -238,7 +243,7 @@
                     <h4 class="font-weight-normal mb-3">Maturity Date <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                     </h4>
                     <h3 class="mb-5" id="ppf-md">$ 15,0000</h3>
-                    <h6 class="card-text">Decreased by 10%</h6>
+                    
                   </div>
                 </div>
               </div>
