--- a/total.html
+++ b/total.html
@@ -23,7 +23,7 @@
       <!-- partial:partials/_navbar.html -->
       <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-          <a class="navbar-brand brand-logo" href="index.html"><img src="assets/images/logo.svg" alt="logo" /></a>
+          <a class="navbar-brand brand-logo" href="index.html">Phonepe</a>
           <a class="navbar-brand brand-logo-mini" href="index.html"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-stretch">
@@ -48,7 +48,7 @@
                   <span class="availability-status online"></span>
                 </div>
                 <div class="nav-profile-text">
-                  <p class="mb-1 text-black">Sayanshree Paria</p>
+                  <p class="mb-1 text-black">User</p>
                 </div>
               </a>
               <div class="dropdown-menu navbar-dropdown" style="padding: 1rem;" aria-labelledby="profileDropdown">
@@ -80,7 +80,7 @@
                   <img src="assets/images/faces/face1.jpg" alt="profile">
                 </div>
                 <div class="nav-profile-text d-flex flex-column">
-                  <span class="font-weight-bold mb-2">Sayanshree Paria</span>
+                  <span class="font-weight-bold mb-2">User</span>
                 </div>
               </a>
             </li>
