--- a/insurance.html
+++ b/insurance.html
@@ -47,7 +47,7 @@
                   <span class="availability-status online"></span>
                 </div>
                 <div class="nav-profile-text">
-                  <p class="mb-1 text-black">Sayanshree Paria</p>
+                  <p class="mb-1 text-black">User</p>
                 </div>
               </a>
               <div class="dropdown-menu navbar-dropdown" style="padding: 1rem;" aria-labelledby="profileDropdown">
@@ -79,7 +79,7 @@
                   <img src="assets/images/faces/face1.jpg" alt="profile">
                 </div>
                 <div class="nav-profile-text d-flex flex-column">
-                  <span class="font-weight-bold mb-2">Sayanshree Paria</span>
+                  <span class="font-weight-bold mb-2">User</span>
                 </div>
               </a>
             </li>
